Fixed smaller resize issue with bootstrap, removed cwl link from landing.

--- a/templates/GenespotRE/landing.html
+++ b/templates/GenespotRE/landing.html
@@ -54,7 +54,7 @@
                 <ul>
                     <li><a target="_blank" href="https://github.com/isb-cgc/examples-R">Computational Examples using R</a></li>
                     <li><a target="_blank" href="https://github.com/isb-cgc/examples-Python">Computational Examples using Python</a></li>
-                    <li><a target="_blank" href="https://github.com/isb-cgc/examples-Compute">Computational Examples using Common Workflow Language</a></li>
+{#                    <li><a target="_blank" href="https://github.com/isb-cgc/examples-Compute">Computational Examples using Common Workflow Language</a></li>#}
                     <li><a target="_blank" href="https://github.com/isb-cgc/ISB-CGC-Webapp">Web Application Code Repository</a></li>
                 </ul>
             </div>
@@ -64,7 +64,7 @@
             Last deployed to version {{ version.version }} on {{ version.date }}
             {% endif %}
         </div>
-        <div class="col-lg-6">
+        <div class="col-sm-12 col-md-6 col-lg-6">
             <h3>Warning Notice</h3>
             <p>You are accessing a U.S. Government (National Institute of Health (NIH), National Cancer Institute (NCI) and Institute for Systems Biology ISB) website / application which may contain information that must be protected under the U. S. Privacy Act or other sensitive information which is intended for authorized Scientific or Research use only. Network activity and Application usage is monitored to maintain system security, availability, and to ensure appropriate and legitimate usage, there is no right or expectation to privacy on this website / system. Unauthorized attempts to upload information, change information, or use of this website for other than its intended purpose may result in disciplinary action, civil, and/or criminal penalties. Any individual or system that accesses this website should have no expectation of privacy regarding any communications or data processed by this website. Anyone accessing this website expressly consents to monitoring of their actions and all communication or data transiting or stored on or related to this website and is advised that if such monitoring reveals possible evidence of criminal activity, NIH may provide that evidence to law enforcement officials.</p>
             <h3>Funding</h3>
