--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,8 @@
 @import url("/static/css/font-awesome.min.css");
 @import url("/static/css/vendor.css");
 @import url("/static/css/bootstrap-tokenfield.min.css");
+@import url("/static/css/tokenfield-typeahead.min.css");
+
 /********************************************
  * Generic style resets
  *******************************************/
