--- a/templates/variables/variable_edit.html
+++ b/templates/variables/variable_edit.html
@@ -96,10 +96,10 @@
                                 <ul class="list-group" id="clin-accordion" role="tablist" aria-multiselectable="true">
                                     {% for attr in common_project.variables %}
                                         <li class="list-group-item checkbox">
-                                            <div id="heading-{{ attr }}" class="list-group-item__heading">
+                                            <div id="heading-{{ attr.name }}" class="list-group-item__heading">
                                                 <label>
-                                                    <input class="variable-toggle-checkbox" type="checkbox" value="CLIN:{{ attr }}" name="elements-selected" data-text-label="{{ attr|get_readable_name }}">
-                                                    {{ attr|get_readable_name }}
+                                                    <input class="variable-toggle-checkbox" type="checkbox" value="{{ attr.code }}" name="elements-selected" data-text-label="{{ attr.name|get_readable_name }}">
+                                                    {{ attr.name|get_readable_name }}
                                                 </label>
                                             </div>
                                         </li>
