fixed #97 selection and searching of variables

--- a/templates/variables/variable_edit.html
+++ b/templates/variables/variable_edit.html
@@ -93,7 +93,7 @@
                         <!-- Tab panes -->
                         <div class="tab-content">
                             <div role="tabpanel" class="tab-pane active filter-panel" id="common">
-                                <ul class="list-group" id="clin-accordion" role="tablist" aria-multiselectable="true">
+                                <ul class="list-group" id="common-accordion" role="tablist" aria-multiselectable="true">
                                     {% for attr in common_project.variables %}
                                         <li class="list-group-item checkbox">
                                             <div id="heading-{{ attr.name }}" class="list-group-item__heading">
@@ -107,7 +107,7 @@
                                 </ul>
                             </div>
                             <div role="tabpanel" class="tab-pane filter-panel" id="favorites">
-                                <ul class="list-group" id="clin-accordion" role="tablist" aria-multiselectable="true">
+                                <ul class="list-group" id="favorites-accordion" role="tablist" aria-multiselectable="true">
                                     {% for fav in favorite_list %}
                                         <li class="list-group-item">
                                             <div id="heading-{{ fav.name }}" data-field="{{ fav.name }}" class="list-group-item__heading">
@@ -139,11 +139,11 @@
                                 </div>
                             </div>
                             <div role="tabpanel" class="tab-pane filter-panel" id="datatypes">
-                                <ul class="list-group" id="clin-accordion" role="tablist" aria-multiselectable="true">
+                                <ul class="list-group" id="data-type-accordion" role="tablist" aria-multiselectable="true">
                                     {% for type in datatype_list %}
                                         <li class="list-group-item">
                                             <div id="heading-{{ type.datatype }}" data-field="{{ type.datatype }}" class="list-group-item__heading datatype-selector">
-                                                <a role="button" data-toggle="collapse" data-parent="#clin-accordion" href="#collapse-{{ type.datatype }}" aria-expanded="false" aria-controls="collapse-{{ type.datatype }}">
+                                                <a role="button" data-toggle="collapse" data-parent="#data-type-accordion" href="#collapse-{{ type.datatype }}" aria-expanded="false" aria-controls="collapse-{{ type.datatype }}">
                                                     <i class="fa fa-caret-right"></i><i class="fa fa-caret-down" style="display:none;"></i> {{ type.label }}
                                                 </a>
                                             </div>
@@ -151,7 +151,7 @@
                                             <div id="collapse-{{ type.datatype }}" class="list-group-item__body collapse" role="tabpanel" aria-labelledby="heading-{{ type.datatype }}">
                                                 {% if type.datatype == 'CLIN' %}
                                                     <div class="form-group search-field {{ type.datatype }}-options ">
-                                                        <div class="search-term feature-search">
+                                                        <div  class="search-term feature-search">
                                                             <label for="{{ type.datatype }}-search-term-select">Feature Search</label>
                                                             <select id="{{ type.datatype }}-search-term-select" class="search-term-field"></select>
                                                         </div>
@@ -183,12 +183,12 @@
                                 </ul>
                             </div>
                             <div role="tabpanel" class="tab-pane" id="uploaded">
-                                <ul class="list-group" id="clin-accordion" role="tablist" aria-multiselectable="true">
+                                <ul class="list-group" id="project-accordion" role="tablist" aria-multiselectable="true">
                                     {% for project in projects %}
                                         {% for study in project.study_set.all|active %}
                                             <li class="list-group-item">
                                                 <div id="heading-{{ data_type_name }}" class="list-group-item__heading">
-                                                    <a role="button"  data-toggle="collapse" data-parent="#clin-accordion" href="#collapse-{{ project.id }}-{{ study.id }}" aria-expanded="false" aria-controls="collapse-{{ attr }}">
+                                                    <a role="button"  data-toggle="collapse" data-parent="#project-accordion" href="#collapse-{{ project.id }}-{{ study.id }}" aria-expanded="false" aria-controls="collapse-{{ attr }}">
                                                         <i class="fa fa-caret-right"></i><i class="fa fa-caret-down" style="display:none;"></i> {{ project.name }} | {{ study.name }}
                                                     </a>
                                                 </div>
