--- a/templates/share/site_header.html
+++ b/templates/share/site_header.html
@@ -136,52 +136,52 @@
                             <li class="menu-item">
                                 <form action="{% url 'worksheet_create_with_analysis' %}" method="POST">
                                     {% csrf_token %}
-                                    <input type="hidden" name="analysis" value="barchart">
+                                    <input type="hidden" name="analysis" value="Bar Chart">
                                     <button type="submit">Bar Chart</button>
                                 </form>
                             </li>
                             <li class="menu-item">
                                 <form action="{% url 'worksheet_create_with_analysis' %}" method="POST">
                                     {% csrf_token %}
-                                    <input type="hidden" name="analysis" value="histogram">
+                                    <input type="hidden" name="analysis" value="Histogram">
                                     <button type="submit">Histogram </button>
                                 </form>
                             </li>
                             <li class="menu-item">
                                 <form action="{% url 'worksheet_create_with_analysis' %}" method="POST">
                                     {% csrf_token %}
-                                    <input type="hidden" name="analysis" value="scatterplot">
+                                    <input type="hidden" name="analysis" value="Scatter Plot">
                                     <button type="submit">Scatter Plot</button>
                                 </form>
                             </li>
                             <li class="menu-item">
                                 <form action="{% url 'worksheet_create_with_analysis' %}" method="POST">
                                     {% csrf_token %}
-                                    <input type="hidden" name="analysis" value="violinplot">
+                                    <input type="hidden" name="analysis" value="Violin Plot">
                                     <button type="submit">Violin Plot</button>
                                 </form>
                             </li>
                             <li class="menu-item">
                                 <form action="{% url 'worksheet_create_with_analysis' %}" method="POST">
                                     {% csrf_token %}
-                                    <input type="hidden" name="analysis" value="violinplot2">
-                                    <button type="submit">Violin Plot 2</button>
+                                    <input type="hidden" name="analysis" value="Violin Plot with axis swap">
+                                    <button type="submit">Violin Plot with axis swap</button>
                                 </form>
                             </li>
                             <li class="menu-item">
                                 <form action="{% url 'worksheet_create_with_analysis' %}" method="POST">
                                     {% csrf_token %}
-                                    <input type="hidden" name="analysis" value="cubbyhole">
+                                    <input type="hidden" name="analysis" value="Cubby Hole Plot">
                                     <button type="submit">Cubby Hole</button>
                                 </form>
                             </li>
-                            <li class="menu-item">
-                                <form action="{% url 'worksheet_create_with_analysis' %}" method="POST">
-                                    {% csrf_token %}
-                                    <input type="hidden" name="analysis" value="seqpeak">
-                                    <button type="submit">SeqPeak</button>
-                                </form>
-                            </li>
+{#                            <li class="menu-item">#}
+{#                                <form action="{% url 'worksheet_create_with_analysis' %}" method="POST">#}
+{#                                    {% csrf_token %}#}
+{#                                    <input type="hidden" name="analysis" value="seqpeak">#}
+{#                                    <button type="submit">SeqPeak</button>#}
+{#                                </form>#}
+{#                            </li>#}
                         </ul>
                     </li>
                     <li class="menu-item"><a href="{% url 'sample_analyses' %}">Browse All Analyses</a></li>
