--- a/templates/GenespotRE/dashboard.html
+++ b/templates/GenespotRE/dashboard.html
@@ -99,11 +99,13 @@
             </ul>
         </div>
         <div class="panel-footer">
-             <form id="create-workbook" method="POST" action="{% url 'workbook_create' %}" class="pull-left">
-                {% csrf_token %}
-                 <button type="submit" class="btn btn-primary" ><i class="fa fa-plus"></i>Create a New Workbook</button>
-             </form>
-            <a class="btn btn-link" href="{% url 'workbook_samples' %}">Sample Workbooks</a>
+            <div style="height:40px">
+                <form id="create-workbook" method="POST" action="{% url 'workbook_create' %}" class="pull-left">
+                    {% csrf_token %}
+                    <button type="submit" class="btn btn-primary" ><i class="fa fa-plus"></i>Create a New Workbook</button>
+                </form>
+                {#            <a class="btn btn-link" href="{% url 'workbook_samples' %}">Sample Workbooks</a>#}
+            </div>
         </div>
     </section>
     <div class="row">
