--- a/templates/workbooks/workbook_plot.html
+++ b/templates/workbooks/workbook_plot.html
@@ -20,8 +20,8 @@
     <div class="panel-heading">
         <div class="options-bar">
             {% if workbook.owner.id == user.id %}
-{#  TODO          <a role="button" class="toggle-selection" aria-label="Toggle Sample Selection"><i class="fa fa-crosshairs"></i></a>#}
-            <a role="button" class="show-settings-flyout" data-target=".setting-flyout" aria-label="Show Plot Settings"><i class="fa fa-pencil"></i></a>
+{#  TODO    <a role="button" class="toggle-selection" aria-label="Toggle Sample Selection"><i class="fa fa-crosshairs"></i></a>#}
+            <a role="button" class="show-settings-flyout" data-target=".setting-flyout" aria-label="Show Plot Settings">Edit Analysis Settings</i></a>
             {% else %}
             <a role="button" class="show-settings-flyout" data-target=".setting-flyout" aria-label="Show Plot Settings"><i class="fa fa-tasks"></i></a>
             {% endif %}
@@ -53,14 +53,14 @@
                             {% endif %}
                             {% for var in variables %}
                                 {% if not plot or plot.x_axis.id != var.id %}
-                                    {#                                {% if var.type == plot.yaxis.type  %}#}
+                                    {# TODO {% if var.type == plot.yaxis.type  %}#}
                                     <option value="{{ var.url_code }}" var_id="{{ var.id }}">{{ var.name }}</option>
-                                    {#                                {% endif %}#}
+                                    {# TODO {% endif %}#}
                                 {% endif %}
                             {% endfor %}
                         </select>
                     </div>
-                    <button class="swap btn btn-default btn-sm inline-block space-bottom-10"><i class="fa fa-exchange fa-rotate-90"></i> Swap Values</button>
+                    <button class="swap btn btn-default btn-sm inline-block space-bottom-10"><i class="fa fa-exchange fa-rotate-90"></i>Swap Values</button>
                     <div class="form-group">
                         <label for="{{ plot.id }}-y-select">Y Axis Variable <a role="button" class="y-edit-field" data-attribute="y-selector" aria-label="Y Field Editor"></a></label>
                         <select id="y-axis-select" class="search-term-field" style="width: 230px;">
@@ -71,21 +71,35 @@
                             {% endif %}
                             {% for var in variables %}
                                 {% if not plot or plot.y_axis.id != var.id %}
-                                    {#                                {% if var.type == plot.yaxis.type  %}#}
+                                    {# TODO {% if var.type == plot.yaxis.type  %}#}
                                     <option value="{{ var.url_code }}" var_id="{{ var.id }}">{{ var.name }}</option>
-                                    {#                                {% endif %}#}
+                                    {# TODO {% endif %}#}
                                 {% endif %}
                             {% endfor %}
                         </select>
                     </div>
                     <div class="form-group">
-                        <label for="{{ plot.id }}-color-select">Color By Feature <a role="button" class="color-edit-field" data-attribute="color-selector" aria-label="Color Field Editor"><i class="fa fa-pencil"></i></a></label></label>
-                        <div class="color-selector filter-label label label-default" type="text" id="color-select" name="color-attr" value="{{ plot.color_by }}">{{ plot.color_by }}</div>
+                        <label for="{{ plot.id }}-color-select">Color By Feature</label>
+{#                        <div class="color-selector filter-label label label-default" type="text" id="color-select" name="color-attr" value="{{ plot.color_by }}">{{ plot.color_by }}</div>#}
+                        <select id="color_by" class="search-term-field" style="width: 230px;">
+                            {% if plot.color_by %}
+                                <option value="{{ plot.color_by.url_code }}" var_id="{{ plot.color_by.id }}" selected >{{ plot.color_by.name }}</option>
+                            {% else %}
+                                <option disabled selected>-- select a variable--</option>
+                            {% endif %}
+                            {% for var in variables %}
+                                {% if not plot or plot.color_by.id != var.id %}
+                                    {# TODO {% if var.type == plot.yaxis.type  %}#}
+                                    <option value="{{ var.url_code }}" var_id="{{ var.id }}">{{ var.name }}</option>
+                                    {# TODO {% endif %}#}
+                                {% endif %}
+                            {% endfor %}
+                        </select>
                     </div>
-                    <div class="form-group">
-                        <label for="{{ plot.id }}-color-by-cohort">Color By Cohort</label>
-                        <input type="checkbox" class="color-by-cohort" id="color-by-cohort" />
-                    </div>
+{#                    <div class="form-group">#}
+{#                        <label for="{{ plot.id }}-color-by-cohort">Color By Cohort</label>#}
+{#                        <input type="checkbox" class="color-by-cohort" id="color-by-cohort" />#}
+{#                    </div>#}
                     <div class="form-group">
                         <label>Cohorts</label>
                         <div class="cohort-listing space-top-5">
