--- a/templates/workbooks/workbook_plot.html
+++ b/templates/workbooks/workbook_plot.html
@@ -27,7 +27,7 @@
             {% endif %}
         </div>
     </div>
-    <div class="panel-body">
+    <div class="worksheet-panel-body panel-body">
         <div class="worksheet-plot-loader plot-loader" style="display:none;">
             <div class="load-bar">
               <div class="bar"></div>
