- updated landing page - updated help link in header - removed viz js dependencies on landing

--- a/templates/share/site_header.html
+++ b/templates/share/site_header.html
@@ -17,7 +17,7 @@
                      {% endif %}
 
                     <li class="navbar-link navbar-item"><a href="{% url 'about_page' %}">About</a></li>
-                    <li class="navbar-link navbar-item"><a href="{% url 'help' %}" target="_blank">Help</a></li>
+                    <li class="navbar-link navbar-item"><a href="http://isb-cancer-genomics-cloud.readthedocs.org/en/latest/" target="_blank">Help</a></li>
                 </ul>
             </div>
 
