Changed visualization id to worksheets id

--- a/blink_sass/pages/_visualizations.sass
+++ b/blink_sass/pages/_visualizations.sass
@@ -2,7 +2,7 @@
  * Visualizations Styles
  *******************************************/
 
-#visualizations
+#worksheets
     margin-top: 115px
 
     .data-holder
