--- a/templates/GenespotRE/landing.html
+++ b/templates/GenespotRE/landing.html
@@ -39,22 +39,24 @@
             <div class="row">
                 <div class="col-xs-8 col-xs-offset-2 lj-title-paragraph">
                     <p class="lj-text-center" >The ISB Cancer Genomics Cloud (ISB-CGC) is democratizing access to <a href = "http://cancergenome.nih.gov/" target = "_blank"><strong>TCGA</strong></a> data and coupling it with unprecedented computational power to allow researchers to explore and analyze this vast data-space.</p>
+                    <br>
+                    <p class="lj-text-center" >Follow us on <a href="https://twitter.com/ISB_CGC" target="_blank">Twitter</a> to find out more about our upcoming launch.</p>
                 </div>
             </div>
 
             <div class="row">
-           <div class="col-sm-3"></div>
-            <div class="col-sm-2 lj-header-button lj-block-center" data-scroll-reveal="wait 0.5s, then enter bottom and move 20px over 0.5s">
-              <a href="http://isb-cancer-genomics-cloud.readthedocs.org/en/latest/" target = "_blank">Documentation</a>
+                <div class="col-sm-3"></div>
+                <div class="col-sm-2 lj-header-button lj-block-center" data-scroll-reveal="wait 0.5s, then enter bottom and move 20px over 0.5s">
+                  <a href="http://isb-cancer-genomics-cloud.readthedocs.org/en/latest/" target = "_blank">Documentation</a>
+                </div>
+                <div class="col-sm-2 lj-header-button lj-block-center" data-scroll-reveal="wait 0.5s, then enter bottom and move 20px over 0.5s">
+                  <a href="https://github.com/isb-cgc/" target = "_blank"> <i class="fa fa-github fa-lg" ></i> GitHub</a>
+                </div>
+                <div class="col-sm-2 lj-header-button lj-block-center" data-scroll-reveal="wait 0.5s, then enter bottom and move 20px over 0.5s">
+                  <a href="https://groups.google.com/a/isb-cgc.org/forum/#!newtopic/feedback" target = "_blank">Feedback</a>
+                </div>
+                <div class="col-sm-3"></div>
             </div>
-            <div class="col-sm-2 lj-header-button lj-block-center" data-scroll-reveal="wait 0.5s, then enter bottom and move 20px over 0.5s">
-              <a href="https://github.com/isb-cgc/" target = "_blank"> <i class="fa fa-github fa-lg" ></i> GitHub</a>
-            </div>
-            <div class="col-sm-2 lj-header-button lj-block-center" data-scroll-reveal="wait 0.5s, then enter bottom and move 20px over 0.5s">
-              <a href="https://groups.google.com/a/isb-cgc.org/forum/#!newtopic/feedback" target = "_blank">Feedback</a>
-            </div>
-            <div class="col-sm-3"></div>
-          </div>
         </div>
     </header>
     <div class="row landing-content">
