--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,6 +13,82 @@ html, body, ul, ol {
 ul, ol {
   list-style: none; }
 
+.load-bar {
+  position: relative;
+  width: 100%;
+  height: 15px;
+  background-color: #fdba2c; }
+
+.bar {
+  content: "";
+  display: inline;
+  position: absolute;
+  width: 0;
+  height: 100%;
+  left: 50%;
+  text-align: center; }
+
+.bar:nth-child(1) {
+  background-color: #F7991B;
+  -webkit-animation: loading 3s linear infinite;
+          animation: loading 3s linear infinite; }
+
+.bar:nth-child(2) {
+  background-color: #49AFCD;
+  -webkit-animation: loading 3s linear 1s infinite;
+          animation: loading 3s linear 1s infinite; }
+
+.bar:nth-child(3) {
+  background-color: #a94442;
+  -webkit-animation: loading 3s linear 2s infinite;
+          animation: loading 3s linear 2s infinite; }
+
+@-webkit-keyframes loading {
+  from {
+    left: 50%;
+    width: 0;
+    z-index: 100; }
+  33.3333% {
+    left: 0;
+    width: 100%;
+    z-index: 10; }
+  to {
+    left: 0;
+    width: 100%; } }
+
+@keyframes loading {
+  from {
+    left: 50%;
+    width: 0;
+    z-index: 100; }
+  33.3333% {
+    left: 0;
+    width: 100%;
+    z-index: 10; }
+  to {
+    left: 0;
+    width: 100%; } }
+
+.worksheet-plot-loader {
+  height: 600px;
+  width: 825px;
+  background: #d0d0d0 !important;
+  z-index: 100;
+  margin: -6px -15px 0px -15px; }
+  .worksheet-plot-loader div {
+    margin-right: auto;
+    margin-left: auto; }
+  .worksheet-plot-loader i {
+    left: 43%;
+    top: 40%;
+    margin: auto;
+    font-size: 200px; }
+
+.loading-text {
+  width: 250px;
+  margin-top: 300px;
+  font-size: 20px; }
+
 @-webkit-keyframes ripple {
   0% {
     -webkit-transform: scale(1);
@@ -1396,23 +1472,6 @@ a.skip-nav {
       width: calc(100% - 40px);
       -webkit-transition: width 0.45s ease-in-out;
       transition: width 0.45s ease-in-out; }
-
-.worksheet-plot-loader {
-  height: 600px;
-  width: 825px;
-  background: rgba(0, 0, 0, 0.5);
-  z-index: 100;
-  margin: -6px -15px 0px -15px; }
-  .worksheet-plot-loader div {
-    margin-right: auto;
-    margin-left: auto;
-    width: 180px;
-    padding-top: 180px; }
-  .worksheet-plot-loader i {
-    left: 43%;
-    top: 40%;
-    margin: auto;
-    font-size: 200px; }
 
 #cohort-details .menu-bar h3 {
   margin-top: 0px; }
